# miscellaneous

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.html  tsconfig.json  turbo.json
experiments/built-in-ai/: package.json  rsbuild.config.ts  tsconfig.json
experiments/computer-graphics/: AGENTS.md  package.json  rsbuild.config.ts
frameworks/apollo-graphql/: package.json  tsconfig.json
frameworks/axum-basic/: Cargo.toml
frameworks/axum-basic/src/: main.rs  time_lib.rs
frameworks/axum-basic/src/handlers/: user.rs
frameworks/axum-basic/src/responses/: app.rs
frameworks/axum-basic/src/routes/: mod.rs  root.rs  user.rs
frameworks/axum-basic/src/services/: user.rs
frameworks/axum-basic/src/state/: app.rs
frameworks/mcp/: README.md  package.json
frameworks/napi-basic/: .gitignore  .taplo.toml  Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
frameworks/prosemirror/: package.json
frameworks/react-basic/: package.json
frameworks/react-simple/: package.json
frameworks/vue-basic/: package.json
leet-code/: README.md  package.json  tsconfig.json
leet-code/src/: 1.two-sum.ts  11.container-with-most-water.ts  12.integer-to-roman.ts  121.best-time-to-buy-and-sell-stock.ts  122.best-time-to-buy-and-sell-stock-ii.ts  125.valid-palindrome.ts  128.longest-consecutive-sequence.ts  134.gas-station.ts  (+55 more)
node-basic/: exec.ts  package.json
scripts/: run.js
shared/: package.json
tools/swc-plugin/: Cargo.toml  package.json  tsconfig.json
tools/swc-plugin/src/: lib.rs
tools/swc-plugin/test/: index.ts
(+107 files in other folders)
