[package]
name = "swc-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
serde_json = "1.0.140"
swc_core = { version = "30.1.*", features = ["ecma_plugin_transform"] }
swc_ecma_quote = "18.0.1"

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasip1 generates wasm32-wasip1 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
